assets/css/style.css
* {
	margin: 0;
	padding: 0;
	border: none;
	box-sizing: border-box;	
}

/*styling for the body of the app*/
body {
    font-size: 0.75rem;
    box-sizing: border-box;
    color: #313131;
    justify-content: center;
    align-items: center;   
    scroll-behavior: smooth;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    position: relative;    
}

/* Global */
/*.container {
	width: 100%;
	margin: auto;
	height: fit-content;
}*/

/*Header Section */

/*Styling for the welcome message using username*/
#welcomeText {
    font-size: 1.1rem;
    font-weight: 800;
    /*margin-left: 10px;*/
    font-family: 'Shadows Into Light', cursive;
    text-align: center;
    display: block;
    margin-left: auto;
    margin-right: auto;   
}

/*If dark mode is chosen the colour scheme of the webpage changes*/
.dark-mode {
    background-color: rgb(31, 3, 50);
    color: white;
}

/*Styling for the light/dark mode image*/
.nightday {
    width: 50px;
    height: 50px;
    margin-left: 15px;
}

/*Image for the brain at thetop of page*/
.brain {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 5px;
}

/*Styling for the main heading on page*/
.heading {
    text-align: center;
    font-size: 2.5rem;
    color: #e91e63;
    letter-spacing: 6px;    
    font-family: 'Merriweather', serif;
    text-shadow: #fff 2px 2px 3px;
    font-weight: 800;
}

/*styling for quick blurb introducing quiz*/
.center-message {
    text-align: center;
    width: 60%;
    font-size: 1.2rem;   
    margin-left: auto;
    margin-right: auto;
    background-color: rgba(88, 5, 64, 0.4);
    border-radius: 15px;
    padding: 20px;
    border: 5px solid white;
}

.wrapper {
    text-align: center;
    display: block;    
  }

/*Styling for the start button, that starts the game*/
.controls {
    display: flex;
    justify-content: center;
    align-content: center;
    margin-top: 10px;
}

#start-btn,
#next-btn,
#restart-btn {
    display: block;
    margin-left: auto;
    margin-right: auto;
    background-color: #e91e63;
    width: 120px;
    height: 40px;
    font-size: 1rem;
    text-align: center;
    border-radius: 15px;
    border: 2px solid black;
    text-transform: uppercase;
    text-decoration: none;
    color: white;
}

#start-btn:hover,
#next-btn:hover {
    background-color: rgba(185, 19, 135, 0.4);
}

/*styling for any sundry text within the application*/
.center {
    text-align: center;
    padding: 10px;
    font-size: 1.1rem;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/*Each individual answer box for displaying the options to the user*/
.choice-container {
    height: 100px;
    width: 380px;
    border: 5px solid white;
    border-radius: 15px;
    font-weight: bold;
    font-size: 1rem;
    padding: 10px;
   /* display: flex;*/
    cursor: pointer;
    /*vertical-align: middle;*/
    background-color: rgb(125, 124, 125);   
    margin-bottom: 10px;
    justify-content: space-between;
    display: block;    
    margin-left: auto;
    margin-right: auto;
    color: white;
}

button {
    display: block;
    font: .75rem;
    text-align: center;
}

.choice-container:hover {
    border: 8px solid rgb(233, 123, 233);
    background-color: rgb(194, 95, 201);
}

.hide {
    display: none;
}

/*Used to hide the gaming area before the user presses the start button*/
#hidden {
    display: none;
    visibility: none;
}

/*styling for the information panel relating to the category and difficulty level to the game*/
.informationForQuestion {
    background-color: rgba(185, 19, 135, 0.4);
    height: 130px;
    width: 340px;
    text-align: center;
    border: 5px solid white;
    border-radius: 20px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 10px;
    font-weight: bold;
    line-height: 1.5;
}

/*Styling for Text for Category and Difficulty in information for questions*/
#category,
#difficulty {
    margin-top: 5px;
    text-align: center;
    font-weight: bold;
    font-size: 1rem;
    text-transform: capitalize;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/*Styling for the Question*/
.question-container {
    text-align: center;
    width: 50%;
    font-weight: bold;
    font-size: 1.1rem;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/*Styling for showing the Correct Answer to the User*/
#verify-answer {
    color: green;
    font-weight: Bold;
    font-size: 1.1rem;
    text-transform: uppercase;
    background-color: white;
    border-radius: 15px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 5px;
    width: 350px;
    height: 80px;
    margin-bottom: 10px;
    text-align: center;
}

/*Styling for the Scoring section*/
.score-area {
    text-align: center;
    font-size: 1.1rem;
    margin-bottom: 15px;
    font-weight: bold;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/*Styling for Modal Buttons*/
.pink-buttons {
    margin-top: 10px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    background-color: #e91e63;
    color: white;
    height: 40px;
    width: 100px;
}

/*Styling for the loader*/
.loader {
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid pink;
    width: 120px;
    height: 120px;
    -webkit-animation: spin 2s linear infinite;
    /* Safari */
    animation: spin 2s linear infinite;
}

/* Safari */
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }

    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/*Styling for the Modals*/
.modal,
.modal2 {
    padding: 1em;
    max-width: 50ch;
    border: 0;
    box-shadow: 0 0 1em rgb(0 0 0 / .3);
    background-color: rgb(230, 91, 230);
    color: black;
    opacity: 0.8;
    text-align: center;
}

.modal::backdrop {
    background: rgb(0 0 0 / 0.4);
}

/*Fix for aligment of items in radio buttons*/
label::after {
    content: '\a';
    white-space: pre;
}

/*Styling for Closing message, which shows the result and a supportive comment*/
.closing {
    background-color: white;
    height: 130px;
    width: 350px;
    border-radius: 15px;
    font-size: 1rem;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    color: #313131;
    letter-spacing: 5px;
    margin-bottom: 10px;
    font-family: 'Shadows Into Light', cursive;
    font-weight: bold;
}

#closing-message {
    font-family: 'Shadows Into Light', cursive;
    font-size: 1rem;
}

/*Styling for the footer*/
/*.footer {
   /* text-align: center;
    
    vertical-align: middle;
    font-size: 2rem;
    letter-spacing: 10px;
    padding: 50px;    
   
    margin-bottom: 0;
    background-color: black;
    height: 100px;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;

} */

.button-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;        
  }

  /*#page-container {
    position: relative;
   /* min-height: 220vh;
    margin: 0 auto;
    max-width: 1024px;
  }
  
  #content-wrap {
    padding-bottom: 4rem;    
  }*/
  
  .footer {
    position: absolute;
    left: 0;
    bottom: 0;   
    width: 100vw;
    background-color: black;
    height:10px;
                
  }

  /* *******************For small screen sizes 800px and down *************************************************/

@media screen and (max-width: 600px) {
    .choice-container {
        width: 80%;
        height: 140px;
        font-size: .9rem;
}
}

